--- a/MySelf.WebClient/Index.html
+++ b/MySelf.WebClient/Index.html
@@ -20,7 +20,7 @@
     <!--[if lte IE 8]><script src="js/html5shiv.js"></script><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
     <!--[if lte IE 7]><link rel="stylesheet" href="css/ie7.css" /><![endif]-->
 </head>
-<body class="left-sidebar" data-ng-app="myselflogApp">
+<body class="left-sidebar">
 
     <!-- Wrapper -->
     <div id="wrapper">
@@ -33,26 +33,26 @@
                 <article class="is-post is-post-excerpt">
                     <header>
                         <!--
-                            Note: Titles and bylines will wrap automatically when necessary, so don't worry
-                            if they get too long. You can also remove the "byline" span entirely if you don't
-                            need a byline.
-                            -->
+											Note: Titles and bylines will wrap automatically when necessary, so don't worry
+											if they get too long. You can also remove the "byline" span entirely if you don't
+											need a byline.
+										-->
                         <h2><a href="#">Welcome to Striped</a></h2>
                         <span class="byline">A free, fully responsive HTML5 site template by AJ for HTML5 UP</span>
                     </header>
                     <div class="info">
                         <!--
-                            Note: The date should be formatted exactly as it's shown below. In particular, the
-                            "least significant" characters of the month should be encapsulated in a <span>
-                                                                                                    element to denote what gets dropped in 1200px mode (eg. the "uary" in "January").
-                                                                                                    Oh, and if you don't need a date for a particular page or post you can simply delete
-                                                                                                    the entire "date" element.
+											Note: The date should be formatted exactly as it's shown below. In particular, the
+											"least significant" characters of the month should be encapsulated in a <span>
+											element to denote what gets dropped in 1200px mode (eg. the "uary" in "January").
+											Oh, and if you don't need a date for a particular page or post you can simply delete
+											the entire "date" element.
 											
-                            -->
+										-->
                         <span class="date"><span class="month">Jan<span>uary</span></span> <span class="day">14</span><span class="year">, 2013</span></span>
                         <!--
-                            Note: You can change the number of list items in "stats" to whatever you want.
-                            -->
+											Note: You can change the number of list items in "stats" to whatever you want.
+										-->
                         <ul class="stats">
                             <li><a href="#" class="link-icon24 link-icon24-1">16</a></li>
                             <li><a href="#" class="link-icon24 link-icon24-2">32</a></li>
@@ -65,12 +65,12 @@
                     <p>
                         <strong>Hello!</strong> You're looking at <a href="http://html5up.net/striped/">Striped</a>, a fully responsive HTML5 site template designed by <a href="http://n33.co/">AJ</a>
                         for <a href="http://html5up.net/">HTML5 UP</a> It features a clean, minimalistic design, styling for all basic page elements (including blockquotes, tables and lists), a
-                        repositionable sidebar (left or right), and HTML5/CSS3 code designed for quick and easy customization (see code comments for details).
+										repositionable sidebar (left or right), and HTML5/CSS3 code designed for quick and easy customization (see code comments for details).
                     </p>
                     <p>
                         Striped is released for free under the <a href="http://html5up.net/license/">Creative Commons Attribution license</a> so feel free to use it for personal projects
-                        or even commercial ones &ndash; just be sure to credit <a href="http://html5up.net/">HTML5 UP</a> for the design. If you like what you see here, be sure to check out
-                        <a href="http://html5up.net/">HTML5 UP</a> for more cool designs or follow me on <a href="http://twitter.com/n33co">Twitter</a> for new releases and updates.
+										or even commercial ones &ndash; just be sure to credit <a href="http://html5up.net/">HTML5 UP</a> for the design. If you like what you see here, be sure to check out
+										<a href="http://html5up.net/">HTML5 UP</a> for more cool designs or follow me on <a href="http://twitter.com/n33co">Twitter</a> for new releases and updates.
                     </p>
                 </article>
 
@@ -93,9 +93,9 @@
                         <img src="images/fotogrph-dark-stairwell.jpg" alt="" /></a>
                     <p>
                         Quisque vel sapien sit amet tellus elementum ultricies. Nunc vel orci turpis. Donec id malesuada metus. 
-                        Nunc nulla velit, fermentum quis interdum quis, tate etiam commodo lorem ipsum dolor sit amet dolore. 
-                        Quisque vel sapien sit amet tellus elementum ultricies. Nunc vel orci turpis. Donec id malesuada metus. 
-                        Nunc nulla velit, fermentum quis interdum quis, convallis eu sapien. Integer sed ipsum ante.
+										Nunc nulla velit, fermentum quis interdum quis, tate etiam commodo lorem ipsum dolor sit amet dolore. 
+										Quisque vel sapien sit amet tellus elementum ultricies. Nunc vel orci turpis. Donec id malesuada metus. 
+										Nunc nulla velit, fermentum quis interdum quis, convallis eu sapien. Integer sed ipsum ante.
                     </p>
                 </article>
 
@@ -121,16 +121,16 @@
 
             <!-- Logo -->
             <div id="logo">
-                <h1>mySelfLog</h1>
+                <h1>STRIPED</h1>
             </div>
 
             <!-- Nav -->
             <nav id="nav">
                 <ul>
-                    <li class="current_page_item"><a href="#">Log value</a></li>
-                    <li><a href="#">Diary</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li class="current_page_item"><a href="#">Latest Post</a></li>
+                    <li><a href="#">Archives</a></li>
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Contact Me</a></li>
                 </ul>
             </nav>
 
@@ -146,7 +146,7 @@
                 <div class="inner">
                     <p>
                         <strong>Striped:</strong> A free and fully responsive HTML5 site
-                        template designed by <a href="http://n33.co/">AJ</a> for <a href="http://html5up.net/">HTML5 up!</a>
+										template designed by <a href="http://n33.co/">AJ</a> for <a href="http://html5up.net/">HTML5 up!</a>
                     </p>
                 </div>
             </section>
@@ -154,20 +154,26 @@
             <!-- Recent Posts -->
             <section class="is-recent-posts">
                 <header>
-                    <h2>Recent values</h2>
+                    <h2>Recent Posts</h2>
                 </header>
                 <ul>
-                    <li><a href="#">...</a></li>                    
+                    <li><a href="#">Nothing happened</a></li>
+                    <li><a href="#">My Dearest Cthulhu</a></li>
+                    <li><a href="#">The Meme Meme</a></li>
+                    <li><a href="#">Now Full Cyborg</a></li>
+                    <li><a href="#">Temporal Flux</a></li>
                 </ul>
             </section>
 
             <!-- Recent Comments -->
             <section class="is-recent-comments">
                 <header>
-                    <h2>Recent messages</h2>
+                    <h2>Recent Comments</h2>
                 </header>
                 <ul>
-                    <li>case on <a href="#">...</a></li>                    
+                    <li>case on <a href="#">Now Full Cyborg</a></li>
+                    <li>molly on <a href="#">Untitled Post</a></li>
+                    <li>case on <a href="#">Temporal Flux</a></li>
                 </ul>
             </section>
 
@@ -245,13 +251,14 @@
         </div>
 
     </div>
+
     <script src="Scripts/jquery-ui-1.10.3.min.js"></script>
     <script src="Scripts/dateTimePicker.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
     <script src="http://cdn.oesmith.co.uk/morris-0.4.3.min.js"></script>
     <script src="Scripts/angular.min.js"></script>
     <script src="Scripts/angular-resource.min.js"></script>
-    
+
     <script src="app/js/myselflog.main.js"></script>
     <script src="app/js/services/authentication.js"></script>
     <script src="app/js/services/logger.js"></script>
